deploy/k8s/base/web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cognexa-web
  labels:
    app.kubernetes.io/name: cognexa-web
    app.kubernetes.io/component: web
spec:
  replicas: 2
  revisionHistoryLimit: 5
  minReadySeconds: 10
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: cognexa-web
  template:
    metadata:
      labels:
        app.kubernetes.io/name: cognexa-web
        app.kubernetes.io/component: web
    spec:
      automountServiceAccountToken: false
      terminationGracePeriodSeconds: 20
      securityContext:
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: web
          image: ghcr.io/sujit-s3/cognexa-web:1.0.0
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop: ['ALL']
          startupProbe:
            httpGet:
              path: /healthz
              port: http
            periodSeconds: 3
            timeoutSeconds: 2
            failureThreshold: 20
          readinessProbe:
            httpGet:
              path: /healthz
              port: http
            periodSeconds: 10
            timeoutSeconds: 2
          livenessProbe:
            httpGet:
              path: /healthz
              port: http
            periodSeconds: 20
            timeoutSeconds: 2
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 250m
              memory: 192Mi
          volumeMounts:
            - name: nginx-tmp
              mountPath: /tmp
            - name: nginx-cache
              mountPath: /var/cache/nginx
      volumes:
        - name: nginx-tmp
          emptyDir:
            sizeLimit: 32Mi
        - name: nginx-cache
          emptyDir:
            sizeLimit: 64Mi
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: kubernetes.io/hostname
          whenUnsatisfiable: ScheduleAnyway
          labelSelector:
            matchLabels:
              app.kubernetes.io/name: cognexa-web
